syntax = "proto3";

package io.harness.pms.contracts.interrupts;

option java_multiple_files = true;

import "io/harness/pms/contracts/interrupts/interrupt_type.proto";
import "io/harness/pms/contracts/execution/executable_response.proto";
import "io/harness/pms/contracts/ambiance/ambiance.proto";

message InterruptEvent {
  string interruptUuid = 1;
  InterruptType type = 2;
  map<string, string> metadata = 4;
  string notifyId = 5;
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 6;
  bytes stepParameters = 7;
  oneof response {
    io.harness.pms.contracts.execution.AsyncExecutableResponse async = 8;
    io.harness.pms.contracts.execution.TaskExecutableResponse task = 9;
    io.harness.pms.contracts.execution.TaskChainExecutableResponse taskChain = 10;
  }
}